add css files and two pages

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: My Blogs
 ---
-<h1> {{ page.title }} </h1>
-<p> 最新文章 </p>
+
+<h1> 最新文章 </h1>
 <ul>
     {% for post in site.posts %}
 	    <li> 
