--- a/_posts/2016-03-03-A-New-World.html
+++ b/_posts/2016-03-03-A-New-World.html
@@ -1,9 +1,7 @@
 ---
-layout: default
-title:  Hello,world
+layout: post
 ---
 
-* content
-<h1> {{ page.title }} </h1>
+<h2> {{ page.title }} </h2>
 <p> My first blog article. </p>
 <p> {{ page.date | data_to_string }} </p>
